--- a/Mentoring.OfficeBuilder/Pages/SVG/Svg.razor
+++ b/Mentoring.OfficeBuilder/Pages/SVG/Svg.razor
@@ -4,23 +4,40 @@
 @page "/svg"
 
 @inherits SVGBase
-    <div class="rTable">
-        <div class="rTableRow">
-            <div class="rTableHead"><strong>SVG</strong></div>
-            <div class="rTableHead"><span style="font-weight: bold;">Uploud</span></div>
-        </div>
-        <div class="rTableRow">
-            <input type="file" @ref=inputTypeFileElement /><button @onclick=OnReadFile>Read file</button>
-            @if (Svgs != null)
-            {
-                @foreach (var svg in Svgs)
-                {
-                    <TreeBuilder Model=svg OnClick=OnClick/>
-                }
-
-                <button @onclick=SaveModelsAsync>Save file</button>
-            }
-        </div>
-
+<div class="rTable">
+    <div class="rTableRow">
+        <div class="rTableHead"><strong>SVG</strong></div>
+        <div class="rTableHead"><span style="font-weight: bold;">Uploud</span></div>
     </div>
+    <div class="rTableRow">
+        <input type="file" @ref=inputTypeFileElement /><button @onclick=OnReadFile>Read file</button>
+        @if (Svgs != null)
+        {
+            @foreach (var svg in Svgs)
+            {
+                <TreeBuilder Model=svg OnClick=OnClick />
+            }
+
+            <button @onclick=SaveModelsAsync>Save file</button>
+        }
+    </div>
+    <div>
+        @if (SvgIds != null)
+        {
+            <select class="form-control" @onchange=SvgClicked>
+                @foreach (var id in SvgIds)
+                {
+                    <option value=@id>@id</option>
+                }
+            </select>
+        }
+    </div>
+    <div>
+        @if (Svg != null)
+        {
+            <TreeBuilder Model=Svg OnClick=OnClick />
+        }
+    </div>
+
+</div>
 
