--- a/Mentoring.OfficeBuilder/wwwroot/css/SVGPage.css
+++ b/Mentoring.OfficeBuilder/wwwroot/css/SVGPage.css
@@ -8,11 +8,13 @@
 	padding-top: 20px;
 }
 
-.left {
-    left: 0;
+.container {
+    white-space: nowrap;
 }
 
-.right {
-    right: 0;
+.column {
+    display: inline-block;
+    width: 50%;
+    white-space: normal;
 }
 
